Fixed index bug, added drawing
Fixed bug with index being 1 too high for `LEDSection`s

Added ability to sync any color, currently only changeable from console

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -102,6 +102,7 @@ button {
 }
 
 #draw {
+    position: relative;
     left: -100%;
     width: 100%;
     height: 100%;
